Bug 248156 - [System Settings] System Settings crashes when "Information sources" is about to be opened
Summary: [System Settings] System Settings crashes when "Information sources" is about...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Kevin Ottens
URL:
Keywords:
: 248332 248635 250464 251957 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-08-17 16:17 UTC by Panos
Modified: 2010-10-03 13:35 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (11.38 KB, text/plain)
2010-09-28 20:08 UTC, Balcaen John
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Panos 2010-08-17 16:17:41 UTC
Application: systemsettings (1.0)
KDE Platform Version: 4.5.64 (KDE 4.5.64 (KDE 4.6 >= 20100811)) (Compiled from sources)
Qt Version: 4.6.3
Operating System: Linux 2.6.35-ARCH x86_64
Distribution (Platform): Archlinux Packages

-- Information about the crash:
KDE 4.5.64
ArchLinux x64 
[Notice: KDE SC 4.5.64 is not installed using an official repo.]

I installed KDE 4.5.64 and I opened System Settings. I tried to press "Information Sources" and it crashed.

The crash can be reproduced every time.

-- Backtrace:
Application: System Settings (systemsettings), signal: Segmentation fault
[Current thread is 1 (Thread 0x7f944cf64760 (LWP 14322))]

Thread 2 (Thread 0x7f9439e0c710 (LWP 14342)):
#0  0x00007f944a5630b3 in select () from /lib/libc.so.6
#1  0x00007f944ac39e3d in ?? () from /usr/lib/libQtCore.so.4
#2  0x00007f944ab72485 in ?? () from /usr/lib/libQtCore.so.4
#3  0x00007f9448c3fcb0 in start_thread () from /lib/libpthread.so.0
#4  0x00007f944a5697ad in clone () from /lib/libc.so.6
#5  0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f944cf64760 (LWP 14322)):
[KCrash Handler]
#6  KServiceType::d_func (this=0x0) at /home/build/build/x86_64/kdelibs/src/kdelibs/kdecore/services/kservicetype.h:181
#7  KServiceType::comment (this=0x0) at /home/build/build/x86_64/kdelibs/src/kdelibs/kdecore/services/kservicetype.cpp:234
#8  0x00007f943412d8bc in BackendChooser (this=0x2f0c790, parent=<value optimized out>, backendType=...)
    at /home/build/build/x86_64/kdebase-workspace/src/kdebase-workspace/solid/kcm/backendchooser.cpp:67
#9  0x00007f943412d235 in KcmSolid (this=0x2ec7020, parent=<value optimized out>, args=<value optimized out>)
    at /home/build/build/x86_64/kdebase-workspace/src/kdebase-workspace/solid/kcm/kcmsolid.cpp:58
#10 0x00007f943412d584 in KPluginFactory::createInstance<KcmSolid, QWidget> (parentWidget=<value optimized out>, parent=<value optimized out>, args=...) at /usr/include/kpluginfactory.h:461
#11 0x00007f944b3f63a1 in KPluginFactory::create (this=0x2f05120, iface=0x7f944c68ee20 "KCModule", parentWidget=0x0, parent=0x2d87f40, args=..., keyword=<value optimized out>)
    at /home/build/build/x86_64/kdelibs/src/kdelibs/kdecore/util/kpluginfactory.cpp:191
#12 0x00007f944cb66ef4 in KPluginFactory::create<KCModule> (mod=..., report=KCModuleLoader::Inline, parent=0x2d87f40, args=...)
    at /home/build/build/x86_64/kdelibs/src/kdelibs/kdecore/util/kpluginfactory.h:515
#13 KService::createInstance<KCModule> (mod=..., report=KCModuleLoader::Inline, parent=0x2d87f40, args=...) at /home/build/build/x86_64/kdelibs/src/kdelibs/kdecore/services/kservice.h:541
#14 KService::createInstance<KCModule> (mod=..., report=KCModuleLoader::Inline, parent=0x2d87f40, args=...) at /home/build/build/x86_64/kdelibs/src/kdelibs/kdecore/services/kservice.h:518
#15 KService::createInstance<KCModule> (mod=..., report=KCModuleLoader::Inline, parent=0x2d87f40, args=...) at /home/build/build/x86_64/kdelibs/src/kdelibs/kdecore/services/kservice.h:561
#16 KCModuleLoader::loadModule (mod=..., report=KCModuleLoader::Inline, parent=0x2d87f40, args=...) at /home/build/build/x86_64/kdelibs/src/kdelibs/kutils/kcmoduleloader.cpp:89
#17 0x00007f944cb6b6a9 in KCModuleProxyPrivate::loadModule (this=0x2c5dcf0) at /home/build/build/x86_64/kdelibs/src/kdelibs/kutils/kcmoduleproxy.cpp:106
#18 0x00007f944cb6c2f5 in KCModuleProxy::realModule (this=<value optimized out>) at /home/build/build/x86_64/kdelibs/src/kdelibs/kutils/kcmoduleproxy.cpp:83
#19 0x00007f944c94535c in ModuleView::stateChanged (this=0x27c9530) at /home/build/build/x86_64/kdebase-workspace/src/kdebase-workspace/systemsettings/core/ModuleView.cpp:349
#20 0x00007f944c946248 in ModuleView::qt_metacall (this=0x27c9530, _c=QMetaObject::InvokeMetaMethod, _id=8, _a=0x7fffba0809f0)
    at /home/build/build/x86_64/kdebase-workspace/src/build/systemsettings/core/ModuleView.moc:99
#21 0x00007f944ac6cd9f in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#22 0x00007f944c555bc8 in KPageWidget::currentPageChanged (this=<value optimized out>, _t1=0x2d91060, _t2=0x0) at /home/build/build/x86_64/kdelibs/src/build/kdeui/kpagewidget.moc:96
#23 0x00007f944c555d48 in KPageWidget::qt_metacall (this=0x2863430, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fffba080b20)
    at /home/build/build/x86_64/kdelibs/src/build/kdeui/kpagewidget.moc:84
#24 0x00007f944ac6cd9f in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#25 0x00007f944c5524f7 in KPageView::currentPageChanged (this=<value optimized out>, _t1=<value optimized out>, _t2=<value optimized out>)
    at /home/build/build/x86_64/kdelibs/src/build/kdeui/kpageview.moc:140
#26 0x00007f944c5525d7 in KPageViewPrivate::_k_pageSelected (this=0x27ca1a0, index=..., previous=...) at /home/build/build/x86_64/kdelibs/src/kdelibs/kdeui/paged/kpageview.cpp:235
#27 0x00007f944c5529e2 in KPageView::qt_metacall (this=0x2863430, _c=QMetaObject::InvokeMetaMethod, _id=3, _a=0x7fffba080cd0) at /home/build/build/x86_64/kdelibs/src/build/kdeui/kpageview.moc:100
#28 0x00007f944c555d10 in KPageWidget::qt_metacall (this=0x2863430, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fffba080cd0)
    at /home/build/build/x86_64/kdelibs/src/build/kdeui/kpagewidget.moc:76
#29 0x00007f944ac6cd9f in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#30 0x00007f944bd99cda in QItemSelectionModel::currentChanged(QModelIndex const&, QModelIndex const&) () from /usr/lib/libQtGui.so.4
#31 0x00007f944bd99dd2 in QItemSelectionModel::setCurrentIndex(QModelIndex const&, QFlags<QItemSelectionModel::SelectionFlag>) () from /usr/lib/libQtGui.so.4
#32 0x00007f944c551710 in KPageViewPrivate::_k_rebuildGui (this=0x27ca1a0) at /home/build/build/x86_64/kdelibs/src/kdelibs/kdeui/paged/kpageview.cpp:70
#33 0x00007f944c5528e5 in KPageViewPrivate::_k_modelChanged (this=0x27ca1a0) at /home/build/build/x86_64/kdelibs/src/kdelibs/kdeui/paged/kpageview.cpp:190
#34 0x00007f944c5529f2 in KPageView::qt_metacall (this=0x2863430, _c=QMetaObject::InvokeMetaMethod, _id=2, _a=0x7fffba081050) at /home/build/build/x86_64/kdelibs/src/build/kdeui/kpageview.moc:99
#35 0x00007f944c555d10 in KPageWidget::qt_metacall (this=0x2863430, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fffba081050)
    at /home/build/build/x86_64/kdelibs/src/build/kdeui/kpagewidget.moc:76
#36 0x00007f944ac6cd9f in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#37 0x00007f944c556dc2 in KPageWidgetModel::addPage (this=0x284d500, item=0x2d91060) at /home/build/build/x86_64/kdelibs/src/kdelibs/kdeui/paged/kpagewidgetmodel.cpp:394
#38 0x00007f944c945ab5 in ModuleView::addModule (this=0x27c9530, module=0x27ee9b8) at /home/build/build/x86_64/kdebase-workspace/src/kdebase-workspace/systemsettings/core/ModuleView.cpp:190
#39 0x00007f944c946017 in ModuleView::loadModule (this=0x27c9530, menuItem=<value optimized out>)
    at /home/build/build/x86_64/kdebase-workspace/src/kdebase-workspace/systemsettings/core/ModuleView.cpp:144
#40 0x00007f943a55e360 in IconMode::changeModule (this=0x27cadf0, activeModule=...) at /home/build/build/x86_64/kdebase-workspace/src/kdebase-workspace/systemsettings/icons/IconMode.cpp:133
#41 0x00007f943a55e6c1 in IconMode::qt_metacall (this=0x27cadf0, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fffba081470)
    at /home/build/build/x86_64/kdebase-workspace/src/build/systemsettings/icons/IconMode.moc:80
#42 0x00007f944ac6cd9f in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#43 0x00007f944bd47345 in QAbstractItemView::activated(QModelIndex const&) () from /usr/lib/libQtGui.so.4
#44 0x00007f944bd4783d in QAbstractItemView::mouseReleaseEvent(QMouseEvent*) () from /usr/lib/libQtGui.so.4
#45 0x00007f944bd6133e in QListView::mouseReleaseEvent(QMouseEvent*) () from /usr/lib/libQtGui.so.4
#46 0x00007f944c4f8872 in KCategorizedView::mouseReleaseEvent (this=0x28cb890, event=0x7fffba082620) at /home/build/build/x86_64/kdelibs/src/kdelibs/kdeui/itemviews/kcategorizedview.cpp:1031
#47 0x00007f944b89f292 in QWidget::event(QEvent*) () from /usr/lib/libQtGui.so.4
#48 0x00007f944bc37eb6 in QFrame::event(QEvent*) () from /usr/lib/libQtGui.so.4
#49 0x00007f944bd44453 in QAbstractItemView::viewportEvent(QEvent*) () from /usr/lib/libQtGui.so.4
#50 0x00007f944ac58ec7 in QCoreApplicationPrivate::sendThroughObjectEventFilters(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#51 0x00007f944b84f821 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#52 0x00007f944b8541ba in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#53 0x00007f944c5226e6 in KApplication::notify (this=0x7fffba083000, receiver=0x28b7870, event=0x7fffba082620) at /home/build/build/x86_64/kdelibs/src/kdelibs/kdeui/kernel/kapplication.cpp:310
#54 0x00007f944ac58d3c in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#55 0x00007f944b8507a5 in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool) () from /usr/lib/libQtGui.so.4
#56 0x00007f944b8cb3c8 in ?? () from /usr/lib/libQtGui.so.4
#57 0x00007f944b8c9dc9 in QApplication::x11ProcessEvent(_XEvent*) () from /usr/lib/libQtGui.so.4
#58 0x00007f944b8efdd4 in ?? () from /usr/lib/libQtGui.so.4
#59 0x00007f944ac58122 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#60 0x00007f944ac5835c in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#61 0x00007f944ac5c76b in QCoreApplication::exec() () from /usr/lib/libQtCore.so.4
#62 0x0000000000410dc9 in main (argc=5, argv=0x7fffba0832c8) at /home/build/build/x86_64/kdebase-workspace/src/kdebase-workspace/systemsettings/app/main.cpp:49

Reported using DrKonqi
Comment 1 Ben Cooksley 2010-08-19 09:22:08 UTC
*** Bug 248332 has been marked as a duplicate of this bug. ***
Comment 2 Christoph Feck 2010-08-22 18:08:42 UTC
*** Bug 248635 has been marked as a duplicate of this bug. ***
Comment 3 Ben Cooksley 2010-09-12 09:51:21 UTC
*** Bug 250464 has been marked as a duplicate of this bug. ***
Comment 4 Christoph Feck 2010-09-21 17:33:41 UTC
*** Bug 251957 has been marked as a duplicate of this bug. ***
Comment 5 Balcaen John 2010-09-28 20:08:19 UTC
Created attachment 52054 [details]
New crash information added by DrKonqi

systemsettings (1.0) on KDE Platform 4.5.68 (4.6 >= 20100912) using Qt 4.7.0

- What I was doing when the application crashed:
Simply click on the « information sources » icon.

-- Backtrace (Reduced):
#11 0x00007f4484b4ede4 in KSharedPtr<KServiceType>::operator-> (this=0x7fff78b73c40) at /usr/include/ksharedptr.h:126
#12 0x00007f4484b4cb8e in BackendChooser::BackendChooser (this=0x1e386f0, parent=<value optimized out>, backendType=...)
    at /usr/src/debug/kdebase-workspace-4.5.68svn1174542/solid/kcm/backendchooser.cpp:67
#13 0x00007f4484b4c1ce in KcmSolid::KcmSolid (this=0x1e28830, parent=<value optimized out>, args=<value optimized out>) at /usr/src/debug/kdebase-workspace-4.5.68svn1174542/solid/kcm/kcmsolid.cpp:58
#14 0x00007f4484b4c8c3 in KPluginFactory::createInstance<KcmSolid, QWidget> (parentWidget=<value optimized out>, parent=<value optimized out>, args=...) at /usr/include/kpluginfactory.h:461
#15 0x00007f4496ca85ae in KPluginFactory::create (this=0x1e254b0, iface=0x7f4497fab380 "KCModule", parentWidget=0x0, parent=0x1b0b3e0, args=..., keyword=<value optimized out>)
    at /usr/src/debug/kdelibs-4.5.68svn1174542/kdecore/util/kpluginfactory.cpp:191
Comment 6 Christophe Marin 2010-10-01 12:54:55 UTC
kcmshell4 kcm_solid doesn't crash anymore with this:
maybe because the fakebluetoothbackend is not built anymore ? 

Index: kcmsolid.cpp
===================================================================
--- kcmsolid.cpp        (révision 1181533)
+++ kcmsolid.cpp        (copie de travail)
@@ -55,13 +55,13 @@
 
     m_powerChooser = new BackendChooser(this, "SolidPowerManager");
     m_networkChooser = new BackendChooser(this, "SolidNetworkManager");
-    m_bluetoothChooser = new BackendChooser(this, "SolidBluetoothManager");
+    //m_bluetoothChooser = new BackendChooser(this, "SolidBluetoothManager");
     m_remoteControlChooser = new BackendChooser(this, "SolidRemoteControlManager");
     m_modemChooser = new BackendChooser(this, "SolidNetworkManager");
 
     layout()->addWidget(m_powerChooser);
     layout()->addWidget(m_networkChooser);
-    layout()->addWidget(m_bluetoothChooser);
+    //layout()->addWidget(m_bluetoothChooser);
     layout()->addWidget(m_remoteControlChooser);
     layout()->addWidget(m_modemChooser);
 
@@ -71,8 +71,8 @@
              this, SLOT(slotChooserChanged(bool)));
     connect(m_networkChooser, SIGNAL(changed(bool)),
              this, SLOT(slotChooserChanged(bool)));
-    connect(m_bluetoothChooser, SIGNAL(changed(bool)),
-             this, SLOT(slotChooserChanged(bool)));
+//    connect(m_bluetoothChooser, SIGNAL(changed(bool)),
+//             this, SLOT(slotChooserChanged(bool)));
     connect(m_modemChooser, SIGNAL(changed(bool)),
              this, SLOT(slotChooserChanged(bool)));
 
@@ -82,7 +82,7 @@
 {
     m_powerChooser->load();
     m_networkChooser->load();
-    m_bluetoothChooser->load();
+//    m_bluetoothChooser->load();
     m_remoteControlChooser->load();
     m_modemChooser->load();
 }
@@ -91,7 +91,7 @@
 {
     m_powerChooser->save();
     m_networkChooser->save();
-    m_bluetoothChooser->save();
+//    m_bluetoothChooser->save();
     m_modemChooser->save();
 }
 
@@ -99,7 +99,7 @@
 {
     m_powerChooser->defaults();
     m_networkChooser->defaults();
-    m_bluetoothChooser->defaults();
+//    m_bluetoothChooser->defaults();
     m_modemChooser->defaults();
 }
Comment 7 smalcom 2010-10-03 12:33:23 UTC
Maybe this help

file:
kdebase/workspace/solid/kcm/backendchooser.cpp

function:
BackendChooser::BackendChooser(QWidget *parent, const QString &backendType)
    : QWidget(parent), m_backendType(backendType)
{
    m_ui.setupUi(this);

    connect(m_ui.listView, SIGNAL(itemSelectionChanged()),
             this, SLOT(slotSelectionChanged()));
    connect(m_ui.upButton, SIGNAL(clicked()),
             this, SLOT(slotUpClicked()));
    connect(m_ui.downButton, SIGNAL(clicked()),
             this, SLOT(slotDownClicked()));

    qDebug() << "BackendChooser::BackendChooser. parent = " << parent << ", backendType = " << backendType;
    KServiceType::Ptr service_type = KServiceType::serviceType(backendType);
    qDebug() << "service_type = " << service_type;

    QString title = service_type->comment();

    qDebug() << "title = " << title;
    
    if (title.isEmpty())
    {
        title = backendType;
    }

    m_ui.groupBox->setTitle(title);
    
    qDebug() << "Exit";
}


output:
service_type =  true 
title =  "Програма керування живленням" 
Exit 
BackendChooser::BackendChooser. parent =  KcmSolid(0x9adfd0) , backendType =  "SolidNetworkManager" 
service_type =  true 
title =  "Програма керування мережею" 
Exit 
BackendChooser::BackendChooser. parent =  KcmSolid(0x9adfd0) , backendType =  "SolidBluetoothManager" 
service_type =  false 
KCrash: Application 'systemsettings' crashing...
Comment 8 Kevin Ottens 2010-10-03 13:35:52 UTC
SVN commit 1182104 by ervin:

We were lacking a check for a missing service type which is the case now
that the bluetooth backend stack is gone.
Since I was at it I removed the bluetooth backend chooser since it's
obviously useless now.

BUG: 248156


 M  +4 -1      backendchooser.cpp  
 M  +0 -7      kcmsolid.cpp  
 M  +0 -1      kcmsolid.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1182104