We were lacking a check for a missing service type which is the case now that the bluetooth backend stack is gone. Since I was at it I removed the bluetooth backend chooser since it's obviously useless now.

BUG: 248156

svn path=/trunk/KDE/kdebase/workspace/; revision=1182104