solid/kcm/kcmsolid.h
@@ -43,7 +43,6 @@ private:
 
     BackendChooser *m_powerChooser;
     BackendChooser *m_networkChooser;
-    BackendChooser *m_bluetoothChooser;
     BackendChooser *m_remoteControlChooser;
     BackendChooser *m_modemChooser;
 };
